# 3-python-package-package

./: MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: build.yaml
src/magic8ball/: __init__.py  __main__.py  data.json  fortunes.py
src/magic8ballfortunes/: __main__.py  data.json  fortunes.py
tests/: test_fortunes.py
